Moves compile task overrides for modules down into root build file.